<resources>
    <string name="app_name">爬闻</string>
    <string name="action_settings">Settings</string>

    <string name="main_toolbar_news">新闻</string>
    <string name="main_toolbar_recommend">推荐</string>
    <string name="main_toolbar_me">我</string>

    <string name="me_click_login">点击登录</string>
    <string name="me_collection">我的收藏</string>
    <string name="me_info">消息中心</string>
    <string name="me_activity">活动广场</string>
    <string name="me_feedback">意见反馈</string>

    <string name="details_edittext_hint">写评论...</string>

    <string name="setting_account">账号管理</string>
    <string name="setting_cache">清理缓存</string>
    <string name="setting_push">推送通知</string>
    <string name="setting_collection">收藏时转发</string>
    <string name="setting_update">检查更新</string>
    <string name="setting_app">应用推荐</string>
    <string name="setting_about">关于我们</string>
    <string name="setting_agreement">爬闻用户协议</string>
    
    <string name="login_account">用户名</string>
    <string name="login_password">密码</string>
    <string name="login_login">登录</string>
    <string name="login_sign_up">免费注册</string>
    <string name="login_forget_password">忘记密码</string>

    <string name="sign_up_sign">注册</string>

    <string name="collection_empty_tip">那些不该忘却的事情\n收藏它们吧</string>

    <string name="info_empty_tip">暂无消息</string>

    <string name="feedback_edittext_hint">请输入反馈意见</string>
    <string name="feedback_submit">提交</string>

    <string name="about_title">爬闻，陪您看新闻</string>
    <string name="about_version">版本：1.0.0</string>
    <string name="about_right">Copyright © 2016. All Rights Reserved.</string>
    
    <string name="personal_icon">头像</string>
    <string name="personal_nickname">昵称</string>
    <string name="personal_bind">账号绑定</string>
    <string name="personal_weixin">微信</string>
    <string name="personal_qq">QQ</string>
    <string name="personal_sina">新浪微博</string>
    <string name="personal_tencent">腾讯微博</string>
    <string name="personal_not_bind">未绑定</string>
    <string name="personal_logout">退出登录</string>

    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开加载更多</string>
</resources>
