<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <RadioGroup
        android:id="@+id/main_rg_tabbar"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="5dp">
        <RadioButton
            android:id="@+id/main_rb_news"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:button="@null"
            android:textSize="12sp"
            android:text="@string/main_toolbar_news"
            android:drawableTop="@drawable/main_btn_news_selector"/>
        <RadioButton
            android:id="@+id/main_rb_recommend"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:button="@null"
            android:textSize="12sp"
            android:text="@string/main_toolbar_recommend"
            android:drawableTop="@drawable/main_btn_recommend_selector"/>
        <RadioButton
            android:id="@+id/main_rb_me"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:button="@null"
            android:textSize="12sp"
            android:text="@string/main_toolbar_me"
            android:drawableTop="@drawable/main_btn_me_selector"/>
    </RadioGroup>
    <View
        android:id="@+id/main_view_div"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_above="@id/main_rg_tabbar"
        android:background="@color/gray"/>
    <FrameLayout
        android:id="@+id/main_layout_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/main_view_div"></FrameLayout>
</RelativeLayout>
