<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.fang.crawlnews.widget.HeaderLayout
        android:id="@+id/sign_up_headerlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="40dp">
        <EditText
            android:id="@+id/sign_up_et_account"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textCursorDrawable="@null"
            android:singleLine="true"
            android:hint="@string/login_account"
            android:paddingLeft="40dp"
            android:textSize="15sp"
            android:background="@drawable/login_bg_edittext_shape"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:background="@drawable/login_icon_account"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp">
        <EditText
            android:id="@+id/sign_up_et_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textCursorDrawable="@null"
            android:singleLine="true"
            android:hint="@string/login_password"
            android:paddingLeft="40dp"
            android:textSize="15sp"
            android:background="@drawable/login_bg_edittext_shape"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:background="@drawable/login_icon_password"/>
    </FrameLayout>

    <Button
        android:id="@+id/sign_up_btn_sign"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="40dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:text="@string/sign_up_sign"
        android:background="@drawable/login_btn_login_selector"/>
</LinearLayout>