<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_light">
    <com.fang.crawlnews.widget.HeaderLayout
        android:id="@+id/personal_headerlayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <ScrollView
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray_light">
            <RelativeLayout
                android:id="@+id/personal_layout_icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:clickable="true"
                android:background="@drawable/me_bg_item_selector">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:textSize="17sp"
                    android:textColor="@color/black"
                    android:text="@string/personal_icon"/>
                <ImageView
                    android:id="@+id/personal_iv_next_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/me_icon_next"/>
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_toLeftOf="@id/personal_iv_next_icon"
                    android:background="@drawable/me_icon_user_center_head"/>
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/gray"/>

            <RelativeLayout
                android:id="@+id/personal_layout_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:clickable="true"
                android:background="@drawable/me_bg_item_selector">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:textSize="17sp"
                    android:textColor="@color/black"
                    android:text="@string/personal_nickname"/>
                <ImageView
                    android:id="@+id/personal_iv_next_nickname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/me_icon_next"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/personal_iv_next_nickname"
                    android:textSize="15sp"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:textSize="16sp"
                    android:text="@string/personal_bind"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/personal_layout_weixin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:clickable="true"
                android:background="@drawable/me_bg_item_selector">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:textSize="17sp"
                    android:textColor="@color/black"
                    android:text="@string/personal_weixin"/>
                <ImageView
                    android:id="@+id/personal_iv_next_weixin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/me_icon_next"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/personal_iv_next_weixin"
                    android:textSize="15sp"
                    android:text="@string/personal_not_bind"/>
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/gray"/>

            <RelativeLayout
                android:id="@+id/personal_layout_qq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:clickable="true"
                android:background="@drawable/me_bg_item_selector">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:textSize="17sp"
                    android:textColor="@color/black"
                    android:text="@string/personal_qq"/>
                <ImageView
                    android:id="@+id/personal_iv_next_qq"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/me_icon_next"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/personal_iv_next_qq"
                    android:textSize="15sp"
                    android:text="@string/personal_not_bind"/>
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/gray"/>

            <RelativeLayout
                android:id="@+id/personal_layout_sina"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:clickable="true"
                android:background="@drawable/me_bg_item_selector">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:textSize="17sp"
                    android:textColor="@color/black"
                    android:text="@string/personal_sina"/>
                <ImageView
                    android:id="@+id/personal_iv_next_sina"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/me_icon_next"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/personal_iv_next_sina"
                    android:textSize="15sp"
                    android:text="@string/personal_not_bind"/>
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/gray"/>

            <RelativeLayout
                android:id="@+id/personal_layout_tencent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:clickable="true"
                android:background="@drawable/me_bg_item_selector">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:textSize="17sp"
                    android:textColor="@color/black"
                    android:text="@string/personal_tencent"/>
                <ImageView
                    android:id="@+id/personal_iv_next_tencent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/me_icon_next"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/personal_iv_next_tencent"
                    android:textSize="15sp"
                    android:text="@string/personal_not_bind"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/personal_layout_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:padding="10dp"
                android:clickable="true"
                android:background="@drawable/me_bg_item_selector">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="10dp"
                    android:textSize="17sp"
                    android:textColor="@color/blue"
                    android:text="@string/personal_logout"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>